Subindo mais mudanças

--- a/views/base.erb
+++ b/views/base.erb
@@ -120,7 +120,6 @@
 							<a href="/vagas?remoto=S" class="badge badge-primary" name="remoto" id="S">Sim</a>
 							<a href="/vagas?remoto=N" class="badge badge-primary" name="remoto" id="N">Não</a>
 						</li>
-						
 					</ul>
 				</div>
 			</div>
@@ -128,7 +127,7 @@
 		<div class="main-content">
 			<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
 				<div class="container-fluid">
-					<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Vagas de emprego</a>
+					<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Argo - Vagas de emprego</a>
 					<% if !@usuario.nil? %>
 					<ul class="navbar-nav align-items-center d-none d-md-flex">
 						<li class="nav-item dropdown">
