--- a/views/cadastro.erb
+++ b/views/cadastro.erb
@@ -20,19 +20,19 @@
                     </div>
 					<div class="row tipoEmpresa" style="display: none">
                         <div class="custom-control custom-radio mb-3 col-md-3">
-                            <input name="tipo" class="custom-control-input" id="startup" value="startup" type="radio" checked="">
+                            <input name="tipo" class="custom-control-input" id="startup" value="S" type="radio" checked="">
                             <label class="custom-control-label" for="startup">StartUp</label>
                         </div> 
                         <div class="custom-control custom-radio mb-3 col-md-3">
-                            <input name="tipo" class="custom-control-input" id="pequena" value="pequena" type="radio">
+                            <input name="tipo" class="custom-control-input" id="pequena" value="P" type="radio">
                             <label class="custom-control-label" for="pequena">Pequena Empresa</label>
                         </div>  
                         <div class="custom-control custom-radio mb-3 col-md-3">
-                            <input name="tipo" class="custom-control-input" id="media" value="media" type="radio">
+                            <input name="tipo" class="custom-control-input" id="media" value="M" type="radio">
                             <label class="custom-control-label" for="media">Média Empresa</label>
                         </div>
 						<div class="custom-control custom-radio mb-3 col-md-3">
-                            <input name="tipo" class="custom-control-input" id="grande" value="grande" type="radio">
+                            <input name="tipo" class="custom-control-input" id="grande" value="G" type="radio">
                             <label class="custom-control-label" for="grande">Grande Empresa</label>
                         </div>
                     </div>
