Mudanças finais do dia 19/11

--- a/views/base.erb
+++ b/views/base.erb
@@ -110,10 +110,10 @@
 						</li>
 						<li class="nav-item my-2">
 							<h6 class="navbar-heading text-muted">Tipo empresa</h6>
-							<a href="/vagas?tipo=J" class="badge badge-primary" name="tipo" id="S">StartUp</a>
+							<a href="/vagas?tipo=S" class="badge badge-primary" name="tipo" id="S">StartUp</a>
 							<a href="/vagas?tipo=P" class="badge badge-primary" name="tipo" id="P">Pequena</a>
-							<a href="/vagas?tipo=S" class="badge badge-primary" name="tipo" id="M">Média</a>
-							<a href="/vagas?tipo=S" class="badge badge-primary" name="tipo" id="G">Grande</a>
+							<a href="/vagas?tipo=M" class="badge badge-primary" name="tipo" id="M">Média</a>
+							<a href="/vagas?tipo=G" class="badge badge-primary" name="tipo" id="G">Grande</a>
 						</li>
 						<li class="nav-item my-2">
 							<h6 class="navbar-heading text-muted">Remoto</h6>
@@ -127,7 +127,7 @@
 		<div class="main-content">
 			<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
 				<div class="container-fluid">
-					<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Argo - Vagas de emprego</a>
+					<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Argon - Vagas de emprego</a>
 					<% if !@usuario.nil? %>
 					<ul class="navbar-nav align-items-center d-none d-md-flex">
 						<li class="nav-item dropdown">
