--- a/views/baseAdmin.erb
+++ b/views/baseAdmin.erb
@@ -14,7 +14,7 @@
 		<div class="main-content">
 			<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
 				<div class="container-fluid">
-					<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Argo - Vagas de emprego</a>
+					<a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Argon - Vagas de emprego</a>
 					<% if !@usuario.nil? %>
 					<ul class="navbar-nav align-items-center d-none d-md-flex">
 						<li class="nav-item dropdown">
