--- a/views/vagas.erb
+++ b/views/vagas.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-9 ml-auto mr-auto">
+	<div class="col-10 ml-auto mr-auto">
 		<div class="card shadow">
 			<div class="card-header border-0">
 				<div class="row">
@@ -7,7 +7,7 @@
 						<h3 class="mb-0"><%= @titulo %></h3>
 					</div>
 					<div class="col-6 text-right">
-						<a href="/vaga/cadastrar">
+						<a href="/vaga/cadastro">
 							<i class="fas fa-plus text-default"></i>
 						</a>
 					</div>
@@ -32,7 +32,9 @@
 						<tr>
 							<th scope="row">
 								<div class="align-items-center">
-                                    <span class="mb-0 text-sm"><%= vaga.titulo %></span>
+									<a href="/vaga/<%= vaga.id %>">
+                                    	<span class="mb-0 text-sm"><%= vaga.titulo %></span>
+									</a>
 								</div>
 							</th>
                             <td>
@@ -61,7 +63,7 @@
 								</span>
 							</td>
 							<td class="text-right">
-								<div class="dropdown" style="z-index: 10001">
+								<div class="dropdown">
 									<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 										<i class="fas fa-ellipsis-v"></i>
 									</a>
