--- a/views/vagas.erb
+++ b/views/vagas.erb
@@ -69,6 +69,7 @@
 									</a>
 									<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
 										<a class="dropdown-item" href="/vaga/editar/<%= vaga.id %>">Editar</a>
+										<a class="dropdown-item" href="/vaga/candidaturas/<%= vaga.id %>">Visualizar candidaturas</a>
 										<a class="dropdown-item" href="/vaga/deletar/<%= vaga.id %>">Deletar</a>
 									</div>
 								</div>
