subindo algumas coisas

--- a/views/cadastro.erb
+++ b/views/cadastro.erb
@@ -10,11 +10,11 @@
                         <div class="col-md-3">
                         </div>
                         <div class="custom-control custom-radio mb-3 col-md-3">
-                            <input name="tipoUsuario" class="custom-control-input" value="empresa" id="empresa" type="radio">
+                            <input name="tipoUsuario" class="custom-control-input" value="empresa" id="empresa" type="radio" checked="">
                             <label class="custom-control-label" for="empresa">Empresa</label>
                         </div>  
                         <div class="custom-control custom-radio mb-3 col-md-4">
-                            <input name="tipoUsuario" class="custom-control-input" value="usuario" id="candidato" type="radio" checked="">
+                            <input name="tipoUsuario" class="custom-control-input" value="usuario" id="candidato" type="radio">
                             <label class="custom-control-label" for="candidato">Candidato</label>
                         </div>
                     </div>
