--- a/views/baseAdmin.erb
+++ b/views/baseAdmin.erb
@@ -37,6 +37,10 @@
 									<i class="fas fa-list-ul"></i>
 									<span>Minhas candidaturas</span>
 								</a>
+								<a href="/habilidades" class="dropdown-item">
+									<i class="fas fa-keyboard"></i>
+									<span>Minhas habilidades</span>
+								</a>
 								<a href="/logout" class="dropdown-item">
 									<i class="fas fa-sign-out-alt"></i>
 									<span>Sair</span>
@@ -58,7 +62,7 @@
 								</div>
 							</a>
 							<div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
-								<a href="/usuario" class="dropdown-item">
+								<a href="/empresa" class="dropdown-item">
 									<i class="fas fa-user"></i>
 									<span>Meu perfil</span>
 								</a>
