--- a/views/usuario.erb
+++ b/views/usuario.erb
@@ -10,7 +10,7 @@
                                 <span class="description">Candidaturas</span>
                             </div>
                             <div>
-                                <span class="heading">10</span>
+                                <span class="heading"><%= @habilidades.count %></span>
                                 <span class="description">Habilidades</span>
                             </div>
                         </div>
